# studentresume

./: .gitignore  LICENSE  README.md  pull_request_template.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/: requiredFields.json  requirements.txt  testonepage.resume.json
src/studentresume/: packagecli.py  resume.py  sample.resume.json
src/studentresume/tests/: test_resume.py
src/studentresume/themes/: default.json  default2.json  default3.json
studentresume/: json_validator.py  packagecli.py  requiredFields.json  resume.py  run.py  sample.resume.json  theme-schema.json
studentresume/tests/: test_json_validator.py  test_resume.py  test_run.py
studentresume/themes/: default.json  default2.json  default3.json
tests/: test_json_validator.py  test_resume.py  test_run.py  test_studentresume.py
