[tool.poetry]
name = "studentresume"
version = "0.7.0"
description = ""
authors = ["curtiskennedy <52674197+curtiskennedy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
reportlab = "^3.6.12"
jsonschema = "^4.17.3"
typer = "^0.7.0"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
studentresume = 'studentresume.run:main'