[tool.poetry]
name = "studentresume"
version = "0.8.3"
description = "Student Resume Generator Python Package"
authors = ["Diana Le <dble@ualberta.ca>",
           "Ivan Zhang <yzhang24@ualberta.ca>",
           "Curtis Kennedy <ckennedy@ualberta.ca>",
           "YiJing Qu <qu8@ualberta.ca>",
           "Jason Robock <jrobock@ualberta.ca>",
           "Mohammed Alzafarani <alzafara@ualberta.ca>",]
readme = "README.md"
license = "MIT"
repository = "https://github.com/open-uofa/studentresume"
homepage = "https://studentresume.org"

[tool.poetry.dependencies]
python = "^3.8"
reportlab = "^3.6.12"
jsonschema = "^4.17.3"
typer = "^0.7.0"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
studentresume = 'studentresume.run:app'